Word synthax correction, footer margin, snapshot image

--- a/TP-1 Premiere Page Web/42-brisa-william.html
+++ b/TP-1 Premiere Page Web/42-brisa-william.html
@@ -21,14 +21,14 @@
             <!-- Paragraphe 1 -->
             <article>
                 <h2>Se connecter à la toile</h2>
-                <p>De nos jours, avec la fibre ou la 4G, les formats de transmission des données sont opérés  de manière numèrique de boût en boût, avec des 0 et des 1.</p>
+                <p>De nos jours, avec la fibre ou la 4G, les formats de transmission des données sont opérés de manière numérique de boût en boût, avec des 0 et des 1, ce qui n'était pas le cas il y a quelques années.</p>
                 <p>L'époppée de l'internet commence en 1950, lorsqu'IBM met en fonctionnement les premiers modems pour le dispositif SAGE, le système de défense aérien des Etats-Unis. Mais celui-ci était destiné à un usage très privé.</p>
-                <p>Dans les année 1980, Dieu (non, une équipe d'ingénieurs) concu une boîte plus ou moins étonnante qui se connecte au réseau téléphonique commuté (analogique). Elle est pourvue de deux orifices, le premier contient un haut-parleur et le second un microphone</p>
+                <p>Dans les année 1980, Dieu (non, une équipe d'ingénieurs) concu une boîte plus ou moins étonnante qui peut se connecter au réseau téléphonique commuté (analogique, téléphonique classique). Elle est pourvue de deux orifices, le premier contient un haut-parleur et le second un microphone</p>
                 <ul>
                     <li><strong>Le haut-parleur :</strong> il permet d'envoyer des signaux sonores analogiques, on ne parle pas ici de 1 et de 0 mais bien de <a href="https://www.youtube.com/watch?v=gsNaR6FRuO0" target="_BLANK">fréquences audibles</a> permettant de composer un numéro, demandé par l'ordinateur et d'envoyer les données</li>
                     <li><strong>Le microphone :</strong> il autorise la communication dans les deux sens, il "écoute" les données renvoyées par l'utilisateur distant</li>
                 </ul>
-                <p>Plus tard, les modems deviendront plus compacts, seront connectés avec un câble RJ-11 (le téléphone pourra rester sur sa base) et il pourra même être intégré dans les ordinateurs personnels.</p>
+                <p>Plus tard, les modems deviendront plus compacts, seront connectés avec un câble RJ-11 (le téléphone pourra rester sur sa base...) et il pourra même être intégré dans les ordinateurs personnels et dans des boîtes tout en un.</p>
                 <a href="https://commons.wikimedia.org/wiki/File:AJ_311_Acoustic_modem.JPG#/media/Fichier:AJ_311_Acoustic_modem.JPG" target="_BLANK">
                     <img src="acoustic_modem.jfif" alt="Modem Acoustique">
                     <p><small><em>Un modem acoustique</em></small></p>
@@ -41,7 +41,7 @@
             <!-- Paragraphe 2 -->
             <article>
                 <h2>Ouvrir l'internet...</h2>
-                <p>Bien! Le téléphone est décroché et apposé sur les orifices en caoutchouc, il ne nous reste plus qu'à : le brancher à l'ordinateur, installer les pilotes, configurer la connexion avec un très joli programme MS-DOS (en couleur si vous en avez la chance), installer un client réseau et faire vos petites recherches en ligne de commande. Car oui, Windows 1.0 est sorti en 1985, et il ne fallait pas trop compter sur le peu de programmes existants. De même pour Mac OS 0.0 dévoilé en 1984 (hi! Big Brother).</p>
+                <p>Bien! Le téléphone est décroché et apposé sur les orifices en caoutchouc, il ne nous reste plus qu'à : le brancher à l'ordinateur, installer les pilotes, configurer la connexion avec un très joli programme MS-DOS (en couleur si vous en avez la chance), installer un client réseau et faire vos petites recherches en ligne de commande, Facile! Car oui, Windows 1.0 est sorti en 1985, et il ne fallait pas trop compter sur le peu de programmes existants. De même pour Mac OS 0.0 dévoilé en 1984 (hi! Big Brother).</p>
                 <p>Les navigateurs web graphiques, de leur côté se développèrent autour du <strong>WorldWideWeb</strong>, le premier d'entre-eux fut développé par celui-ci en 1990 sur un ordinateur NeXT (thanks. Steve).</p>
                 <p><strong>En plus, lorsque quelqu'un "surfait" sur internet, personne ne pouvait téléphoner.</strong> What a bummer!</p>
                 <p>Enfin, bref, c'était plus ou moins compliqué à l'époque.</p>
@@ -52,7 +52,7 @@
 
             <article>
                 <!-- Tableau -->
-                <h3>Récap des différents modems</h3>
+                <h3>Récap des différentes technologies de modem/communication cablée</h3>
                 <hr></hr>
                 <table>
                     <tr>
