--- a/TP-1 Premiere Page Web/42-brisa-william.html
+++ b/TP-1 Premiere Page Web/42-brisa-william.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="UTF-8">
         <title>Voyage dans l'internet (William BRISA)</title>
